--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dayjs": "^1.11.5",
+    "inquirer": "^8.2.0",
     "moment": "^2.29.4",
     "prompt-sync": "^4.2.0",
-    "readline-sync": "^1.4.10"
+    "readline": "^1.3.0",
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
+  },
+  "bin": {
+    "reader": "cli.js"
   }
 }
