--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,12 +14,10 @@
     "dayjs": "^1.11.5",
     "inquirer": "^8.2.0",
     "moment": "^2.29.4",
+    "nodemon": "^2.0.19",
     "prompt-sync": "^4.2.0",
     "readline": "^1.3.0",
     "yargs": "^17.5.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
   },
   "bin": {
     "reader": "cli.js"
